[tool.poetry]
name = "gpt-analyst"
version = "0.1.0"
description = ""
authors = ["Nikolas Schriefer <info@nikolasschriefer.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.12"
langchain = "^0.1"
langchain-experimental = "^0.0.51"
langchain-openai = "^0.0.6"
tabulate = "^0.9.0"
matplotlib = "^3.8"
pandasai = "^1.5.19"
streamlit = "^1.31.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
